[package]
name = "solar-car"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bxcan = { version = "0.6.0", features = ["unstable-defmt"] }
defmt = "0.3.2"
heapless = "0.7.16"
sae-j1939 = "0.1.1"
stm32l4xx-hal = { version = "0.7.1", features = ["rt"] }

[features]
default = ["stm32l451"]
stm32l451 = ["stm32l4xx-hal/stm32l451"]
