[package]
name = "solar-car"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bxcan = { version = "0.6.0", features = ["unstable-defmt"] }
defmt = "0.3.2"
packed_struct = { version = "0.10.1", default-features = false}
stm32l4xx-hal = { version = "0.7.1", features = ["rt"], optional = true }

[dependencies.j1939]
version = "0.1.1"
features = ["bxcan"]
git = "https://github.com/team-arrow-racing/sae-j1939-rs"
# path = "../sae-j1939-rs" # for local development

[features]
default = []
stm32l4 = ["stm32l4xx-hal"]
